# latticefold

./: Cargo.toml
crates/dpp/: Cargo.toml
crates/dpp/src/: boolean_proof.rs  dr1cs_flpcp.rs  embedding.rs  lib.rs  packing.rs  pipeline.rs  rs.rs  sparse.rs  subset_sum.rs
crates/latticefold/: Cargo.toml
crates/latticefold-plus/: Cargo.toml
crates/latticefold-plus/benches/: we_dpp.rs
crates/latticefold-plus/src/: cm.rs  decomp.rs  lib.rs  mlin.rs  plus.rs  r1cs.rs  recording_transcript.rs  rgchk.rs  setchk.rs  streaming_sumcheck.rs  tensor_eval.rs  transcript.rs  utils.rs  we_gate_arith.rs  we_statement.rs
crates/latticefold/examples/: custom_circuit.rs  poseidon2_circuit.rs
crates/latticefold/src/commitment/: commitment_scheme.rs
crates/latticefold/src/utils/: sumcheck.rs
crates/latticefold/src/utils/sumcheck/: prover.rs  verifier.rs
crates/symphony/: Cargo.toml  README.md
crates/symphony-sp1/program/: Cargo.toml
crates/symphony-sp1/program/src/: main.rs
crates/symphony-sp1/script/: Cargo.toml  build.rs
crates/symphony-sp1/script/src/: main.rs
crates/symphony/examples/: symphony_bench.rs  symphony_poseidon2_bench.rs  symphony_public_coin_rg.rs  symphony_sp1_bool_audit.rs  symphony_sp1_fold.rs  symphony_sp1_fold_chunked.rs  symphony_sp1_ir_classify.rs  symphony_sp1_ir_sanity.rs  symphony_sp1_ir_stats.rs  symphony_sp1_oneproof.rs  symphony_sp1_oneproof_bench.rs  symphony_sp1_opcode_audit.rs  symphony_sp1_r1cs_stats.rs  symphony_sp1_range_audit.rs
crates/symphony/src/: dpp_ajtai.rs  dpp_pifold_math.rs  dpp_poseidon.rs  dpp_sumcheck.rs  lib.rs  mle_oracle.rs  poseidon_trace.rs  public_coin_transcript.rs  recording_transcript.rs  rp_rgchk.rs  setchk.rs  sp1_r1cs_loader.rs  streaming_sumcheck.rs  symphony_cm.rs  symphony_coins.rs  symphony_fold.rs  symphony_gr1cs.rs  symphony_had.rs  symphony_open.rs  symphony_pifold_batched.rs  symphony_pifold_streaming.rs  symphony_pilin.rs  symphony_sp1_r1cs.rs  symphony_we_relation.rs  transcript.rs  utils.rs  we_gate_arith.rs  we_gate_inventory.rs  we_statement.rs
crates/symphony/src/pcs/: README.md  batchlin_pcs.rs  cmf_pcs.rs  dpp_folding_pcs_l2.rs  folding_pcs_l2.rs  mod.rs
crates/symphony/tests/: folding_pcs_l2_arithmetization_roundtrip.rs  folding_pcs_l2_poseidon_coins_roundtrip.rs  folding_pcs_l2_soundness.rs  pifold_math_arithmetization_roundtrip.rs  poseidon_trace_arithmetization_roundtrip.rs  symphony_fold_linear.rs  symphony_gr1cs.rs  symphony_had.rs  symphony_open_ajtai.rs  symphony_pifold_accumulator.rs  symphony_pifold_batched.rs  symphony_pifold_batched_accumulator.rs  symphony_pifold_soundness.rs  symphony_pifold_streaming_hetero_m_roundtrip.rs  symphony_pifold_streaming_roundtrip.rs  symphony_rg_fold_correctness.rs  symphony_we_relation.rs  we_gate_constraint_counts.rs
