[workspace] 
members = [
    "crates/cyclotomic-rings",
    "crates/dpp",
    "crates/latticefold",
    "crates/latticefold-plus",
    "crates/symphony",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "sponge",
] }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
criterion = "0.5.1"
cyclotomic-rings = { path = "crates/cyclotomic-rings", default-features = false }
latticefold = { path = "crates/latticefold", default-features = false }
num-bigint = { version = "0.4.5", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-linalg = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-poly = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
toml = "0.8.19"
[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs-header.html"]

[profile.release]
debug = 1

[profile.bench]
lto = false
codegen-units = 16
opt-level = 3
rpath = true
