[package]
name = "dpp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["ark-std/std", "ark-ff/std", "ark-poly/std", "rand/std"]

[dependencies]
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-poly = { version = "0.4.2", default-features = false }
num-integer = "0.1.46"
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
rayon = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "warn"
implicit_clone = "warn"
