[package]
name = "latticefold"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["ark-std/std", "cyclotomic-rings/std", "rand/std"]
parallel = [
    "dep:rayon",
    "std",
    "ark-std/parallel",
    "stark-rings/parallel",
    "stark-rings-linalg/parallel",
    "stark-rings-poly/parallel",
]
getrandom = ["ark-std/getrandom"]

# dev-only
dhat-heap = []

[dependencies]
ark-crypto-primitives = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
cyclotomic-rings = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true, optional = true }
stark-rings = { workspace = true }
stark-rings-linalg = { workspace = true }
stark-rings-poly = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = "0.3.2"
humansize = "2.1.3"
lazy_static = "1.5.0"

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "warn"
implicit_clone = "warn"

[[bench]]
name = "ajtai"
harness = false

[[bench]]
name = "linearization"
harness = false

[[bench]]
name = "decomposition"
harness = false

[[bench]]
name = "folding"
harness = false

[[bench]]
name = "e2e"
harness = false
