[package]
name = "symphony"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["std", "parallel"]
std = ["ark-std/std", "cyclotomic-rings/std", "rand/std"]
parallel = [
    "ark-std/parallel",
    "latticefold/parallel",
    "stark-rings/parallel",
    "stark-rings-linalg/parallel",
    "stark-rings-poly/parallel",
]
getrandom = ["ark-std/getrandom"]

# dev-only
dhat-heap = []

[dependencies]
ark-crypto-primitives = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
criterion = { workspace = true }
cyclotomic-rings = { workspace = true }
hashbrown = "0.15"
latticefold = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
stark-rings = { workspace = true }
stark-rings-linalg = { workspace = true }
stark-rings-poly = { workspace = true }
thiserror = { workspace = true }
dpp = { path = "../dpp" }

[build-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[profile.release]
debug = 1

[profile.bench]
lto = false
codegen-units = 16
opt-level = 3
rpath = true

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "warn"
implicit_clone = "warn"

[[example]]
name = "symphony_public_coin_rg"

[[example]]
name = "symphony_poseidon2_bench"

[[example]]
name = "symphony_sp1_r1cs_stats"

[[example]]
name = "symphony_sp1_oneproof"

[[example]]
name = "symphony_bench"
