[package]
name = "symphony"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["ark-std/std", "cyclotomic-rings/std", "rand/std"]
getrandom = ["ark-std/getrandom"]

# dev-only
dhat-heap = []

[dependencies]
ark-crypto-primitives = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true, features = ["parallel"] }
criterion = { workspace = true }
cyclotomic-rings = { workspace = true }
hashbrown = "0.15"
latticefold = { workspace = true, features = ["parallel"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
stark-rings = { workspace = true, features = ["parallel"] }
stark-rings-linalg = { workspace = true, features = ["parallel"] }
stark-rings-poly = { workspace = true, features = ["parallel"] }
thiserror = { workspace = true }
dpp = { path = "../dpp" }

[build-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "warn"
implicit_clone = "warn"

[[example]]
name = "symphony_public_coin_rg"

[[example]]
name = "symphony_poseidon2_bench"

[[example]]
name = "symphony_sp1_r1cs_stats"

[[example]]
name = "symphony_sp1_oneproof"

[[example]]
name = "symphony_bench"
