[package]
name = "symphony-sp1-script"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Local path dependency to the SP1 SDK (already present in this workspace checkout).
sp1-sdk = { path = "../../../../sp1/crates/sdk" }

[build-dependencies]
sp1-build = { path = "../../../../sp1/crates/build" }

